Add jwmArgs to jlink